src/objects/XO_Follow_Up_Tracking__c.object
<CustomObject>
    <fields>
        <fullName>Provider_Name__c</fullName>
        <label>Provider Name</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Medical_Specialty__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>AASECT</fullName>
                </value>
                <value>
                    <fullName>ABCD Pediatrics</fullName>
                </value>
                <value>
                    <fullName>Alexander Pham, MD</fullName>
                </value>
                <value>
                    <fullName>Ali Bassiri, MD</fullName>
                </value>
                <value>
                    <fullName>Allergy &amp; Asthma Associates</fullName>
                </value>
                <value>
                    <fullName>Allergy and Asthma Associates of Northern California</fullName>
                </value>
                <value>
                    <fullName>Alto Sleep</fullName>
                </value>
                <value>
                    <fullName>Altos Oaks Medical Group</fullName>
                </value>
                <value>
                    <fullName>Amy Hockenbrock, MD</fullName>
                </value>
                <value>
                    <fullName>Anjali Morales, MD</fullName>
                </value>
                <value>
                    <fullName>Anne Hsii, MD</fullName>
                </value>
                <value>
                    <fullName>Archana Dhawan, MD</fullName>
                </value>
                <value>
                    <fullName>Asthma Assoc of NorCal - Fremont</fullName>
                </value>
                <value>
                    <fullName>Asthma Assoc of NorCal - Mountain View</fullName>
                </value>
                <value>
                    <fullName>Asthma Assoc of NorCal - San Jose</fullName>
                </value>
                <value>
                    <fullName>Athena Urology &amp; Urogynecology</fullName>
                </value>
                <value>
                    <fullName>Bay Area Maternity and Women&apos;s Clinic</fullName>
                </value>
                <value>
                    <fullName>Bellevue Endocrine Consultants: Dr Ahmadian</fullName>
                </value>
                <value>
                    <fullName>Bellevue ENT Clinic</fullName>
                </value>
                <value>
                    <fullName>Bel-Red Sleep Diagnostic Center</fullName>
                </value>
                <value>
                    <fullName>Camino Cardiovascular Assoc.</fullName>
                </value>
                <value>
                    <fullName>Carmelo Sgarlata, MD</fullName>
                </value>
                <value>
                    <fullName>Cascade Heart Clinic</fullName>
                </value>
                <value>
                    <fullName>CA Sleep Solutions</fullName>
                </value>
                <value>
                    <fullName>Center for Sports Medicine SF</fullName>
                </value>
                <value>
                    <fullName>Center For Women&apos;s Health at Evergreen</fullName>
                </value>
                <value>
                    <fullName>Chelsea Broido</fullName>
                </value>
                <value>
                    <fullName>Cheryl Chen, MD</fullName>
                </value>
                <value>
                    <fullName>Christopher Bonzon, MD</fullName>
                </value>
                <value>
                    <fullName>Community Psychiatry</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Provider_Name_if_Other__c</fullName>
        <description>Enter the Provider Name if &quot;Other&quot; is selected from Picklist</description>
        <inlineHelpText>Enter the Provider Name if &quot;Other&quot; is selected from Picklist</inlineHelpText>
        <label>Provider Name (if Other)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Provider_Phone_Number__c</fullName>
        <label>Provider Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Provider_for_Survey_Invite__c</fullName>
        <formula>IF(
    ISPICKVAL(Reason_For_Follow_Up__c, &quot;Medical Specialty Referral&quot;),
    IF(
        TEXT(Provider_Name__c) = &quot;Other&quot;,
        Provider_Name_if_Other__c,
        IF(
            AND(
                NOT(ISBLANK(TEXT(Medical_Specialty__c))),
                ISBLANK(TEXT(Provider_Name__c))
            ),
            TEXT(Medical_Specialty__c),
            TEXT(Provider_Name__c)
        )
    ),
    TEXT(Imaging__c)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Provider for Survey Invite</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Psychiatry__c</fullName>
        <label>Psychiatry</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Medical_Specialty__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Psychiatry Austin1</fullName>
                </value>
                <value>
                    <fullName>Psychiatry Austin2</fullName>
                </value>
                <value>
                    <fullName>Stanford Psychiatry</fullName>
                </value>
                <value>
                    <fullName>Psychiatry Cup2</fullName>
                </value>
                <value>
                    <fullName>Friedman, Judith MD</fullName>
                </value>
                <value>
                    <fullName>Abraham, Raya Almufti, MD</fullName>
                </value>
                <value>
                    <fullName>Community Psychiatry</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reason_For_Follow_Up__c</fullName>
        <label>Reason For  Follow-Up</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Internal Referral</fullName>
                </value>
                <value>
                    <fullName>Medical Specialty Referral</fullName>
                </value>
                <value>
                    <fullName>Care Coordination</fullName>
                </value>
                <value>
                    <fullName>Findrisc</fullName>
                </value>
                <value>
                    <fullName>Follow Up Office Visit</fullName>
                </value>
                <value>
                    <fullName>Imaging</fullName>
                </value>
                <value>
                    <fullName>MD Followup</fullName>
                </value>
                <value>
                    <fullName>Medical Records</fullName>
                </value>
                <value>
                    <fullName>Nurse Follow Up</fullName>
                </value>
                <value>
                    <fullName>Patient Communication</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reason_for_Imaging__c</fullName>
        <label>Reason for Imaging</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Records_Received_if_applicable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Records Received (if applicable)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Records_Sent_if_applicable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Records Sent (if applicable)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Referral_Status__c</fullName>
        <label>Referral Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Is the patient scheduled?</fullName>
                </value>
                <value>
                    <fullName>Has the patient been seen?</fullName>
                </value>
                <value>
                    <fullName>Is the report ready?</fullName>
                </value>
                <value>
                    <fullName>Second Request for Report</fullName>
                </value>
                <value>
                    <fullName>Third or more request for report</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Referring_Provider__c</fullName>
        <description>Provider requesting referral</description>
        <label>Referring Provider</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Abucayan Krystal</fullName>
                </value>
                <value>
                    <fullName>Ajay Gupta, MD</fullName>
                </value>
                <value>
                    <fullName>Akbar Zikria</fullName>
                </value>
                <value>
                    <fullName>Akbar Zikria, DO</fullName>
                </value>
                <value>
                    <fullName>Aki Yoshikawa, PTA</fullName>
                </value>
                <value>
                    <fullName>Alan Gjedsted, MD</fullName>
                </value>
                <value>
                    <fullName>Alexandra Garcia, MD</fullName>
                </value>
                <value>
                    <fullName>Alex Mackenzie, MFT</fullName>
                </value>
                <value>
                    <fullName>Alona Habinsky, NP</fullName>
                </value>
                <value>
                    <fullName>Amber Malik, MD</fullName>
                </value>
                <value>
                    <fullName>Ami Kadakia, MD</fullName>
                </value>
                <value>
                    <fullName>Amit Batra, MD</fullName>
                </value>
                <value>
                    <fullName>Amy Hockenbrock, MD</fullName>
                </value>
                <value>
                    <fullName>Amy Spaar, RN</fullName>
                </value>
                <value>
                    <fullName>Anahita Forati, LAc</fullName>
                </value>
                <value>
                    <fullName>Anand Singh, MD</fullName>
                </value>
                <value>
                    <fullName>Andrea Sullivan, MD</fullName>
                </value>
                <value>
                    <fullName>Angela Stanford, RD</fullName>
                </value>
                <value>
                    <fullName>Anita Gaind, MD</fullName>
                </value>
                <value>
                    <fullName>Annie Low, OD</fullName>
                </value>
                <value>
                    <fullName>Ann Messer MD</fullName>
                </value>
                <value>
                    <fullName>Asha Alex, MD</fullName>
                </value>
                <value>
                    <fullName>Ashley Maltz MD</fullName>
                </value>
                <value>
                    <fullName>Asiya Khan, MD</fullName>
                </value>
                <value>
                    <fullName>Barbara Campbell, MD</fullName>
                </value>
                <value>
                    <fullName>Barry Giglio, MD</fullName>
                </value>
                <value>
                    <fullName>Becky Guarino, MD</fullName>
                </value>
                <value>
                    <fullName>Becky Schmitz, MD</fullName>
                </value>
                <value>
                    <fullName>Bias Travis</fullName>
                </value>
                <value>
                    <fullName>Blakely Richardson, DO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Rheumatology__c</fullName>
        <label>Rheumatology</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Medical_Specialty__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Dr. Emily Pineda</fullName>
                </value>
                <value>
                    <fullName>Dr. Gerald Rosenberg</fullName>
                </value>
                <value>
                    <fullName>Dr. Pendleton Wickersham</fullName>
                </value>
                <value>
                    <fullName>Dr. Rodolfo Molina</fullName>
                </value>
                <value>
                    <fullName>Rheumatology specialty referral</fullName>
                </value>
                <value>
                    <fullName>test</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Scheduled_Follow_Up_date__c</fullName>
        <label>Scheduled Follow Up Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Screening_Driven_Follow_Up__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Was this follow up due to a screening visit?</description>
        <label>Screening Driven Follow-Up</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Send_Specialist_Survey__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Send Specialist Survey</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Specialist_Survey_Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check box once the specialist survey has been sent.</description>
        <label>Specialist Survey Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Urology__c</fullName>
        <label>Urology</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Medical_Specialty__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Dr. John De Leon, Jr.</fullName>
                </value>
                <value>
                    <fullName>Dr. Kenneth Stallman</fullName>
                </value>
                <value>
                    <fullName>Dr. Kurt Meissner</fullName>
                </value>
                <value>
                    <fullName>Dr. Patricia Terry</fullName>
                </value>
                <value>
                    <fullName>Dr. William Harmon</fullName>
                </value>
                <value>
                    <fullName>Urology specialty referral</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Visit_Occurred_if_applicable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Visit Occurred (if applicable)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>XO_Follow_Up_Survey_URL__c</fullName>
        <description>Update the Case formula with any new survey URLS. Key:
012E0000000VcLT = AMAT Gloucester
012E0000000VIMk = AMAT Santa Clara
012E0000000V3Y1 = Apple Austin
012E0000000V3Y6 = Apple Cupertino
012E0000000V3YB = Facebook Menlo Park
0120L000000697Z = Apple Sacramento
012E0000000DDu4 = Near Site Health Center Mountain View</description>
        <formula>CASE(RecordTypeId,
&quot;012E0000000V3Y1&quot;, &quot;https://www.research.net/r/FCR8WYY&quot;,
&quot;0120L000000697Z&quot;, &quot;https://www.research.net/r/DWX8SZD&quot;, 
&quot;012E0000000V3Y6&quot;, &quot;https://www.research.net/r/FYF6LT6&quot;,
&quot;012E0000000VcLT&quot;, &quot;https://www.research.net/r/FV65P9W&quot;,
&quot;012E0000000VIMk&quot;, &quot;https://www.research.net/r/2G53VKK&quot;,
&quot;012E0000000V3YB&quot;, &quot;https://www.research.net/r/F7G2HRB&quot;,
&quot;012E0000000DFhR&quot;, &quot;https://www.research.net/r/3X7RNS7&quot;, 
&quot;012E0000000DFhW&quot;, &quot;https://www.research.net/r/3X7RNS7&quot;, 
&quot;012E0000000DDu4&quot;, &quot;https://www.research.net/r/FD8QXVM&quot;,
&quot;012E0000000DFnZ&quot;, &quot;https://www.research.net/r/FD8QXVM&quot;,  
&quot;Please Call the Wellness Center&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>XO Follow Up Survey URL</label>
        <type>Text</type>
    </fields>
    <label>XO Follow Up Tracking</label>
    <listViews>
        <fullName>Allergy_Asthma</fullName>
        <columns>NAME</columns>
        <columns>Patient_First_Name__c</columns>
        <columns>Patient_DOB__c</columns>
        <columns>Provider_Name__c</columns>
        <columns>Scheduled_Follow_Up_date__c</columns>
        <columns>Provider_Phone_Number__c</columns>
        <columns>Notes__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Medical_Specialty__c</field>
            <operation>equals</operation>
            <value>Allergy/Immunology - Other,Allergy and Asthma</value>
        </filters>
        <filters>
            <field>Follow_Up_Status__c</field>
            <operation>equals</operation>
            <value>Open</value>
        </filters>
        <filters>
            <field>Priority__c</field>
            <operation>notContain</operation>
            <value>Urgent</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>XO_Follow_Up_Tracking__c.Apple_Cupertino</value>
        </filters>
        <label>Cupertino - Allergy &amp; Asthma</label>
        <sharedTo>
            <role>XO_Clinical_User_Apple_Cupertino</role>
            <role>XO_Practice_Manager_Apple_Cupertino</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Bariatric</fullName>
        <columns>NAME</columns>
        <columns>Patient_First_Name__c</columns>
        <columns>Patient_DOB__c</columns>
        <columns>Referring_Provider__c</columns>
        <columns>Notes__c</columns>
        <columns>Provider_Name__c</columns>
        <columns>Provider_Phone_Number__c</columns>
        <columns>Scheduled_Follow_Up_date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Follow_Up_Status__c</field>
            <operation>equals</operation>
            <value>Open</value>
        </filters>
        <filters>
            <field>Medical_Specialty__c</field>
            <operation>equals</operation>
            <value>Bariatrics</value>
        </filters>
        <filters>
            <field>Priority__c</field>
            <operation>notContain</operation>
            <value>Urgent</value>
        </filters>
        <label>Cupertino - Bariatric</label>
        <sharedTo>
            <role>XO_Clinical_User_Apple_Cupertino</role>
            <role>XO_Practice_Manager_Apple_Cupertino</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Cup_Specialist_Surveys_July</fullName>
        <booleanFilter>1 AND 2 AND 3 AND 4 AND 5</booleanFilter>
        <columns>NAME</columns>
        <columns>Lumeris_ID__c</columns>
        <columns>Specialist_Survey_Sent__c</columns>
        <columns>Scheduled_Follow_Up_date__c</columns>
        <columns>Reason_For_Follow_Up__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Follow_Up_Status__c</field>
            <operation>equals</operation>
            <value>Closed</value>
        </filters>
        <filters>
            <field>Scheduled_Follow_Up_date__c</field>
            <operation>greaterThan</operation>
            <value>11/1/2015</value>
        </filters>
        <filters>
            <field>Reason_For_Follow_Up__c</field>
            <operation>equals</operation>
            <value>Imaging,Medical Specialty Referral</value>
        </filters>
        <filters>
            <field>Follow_Up_Status__c</field>
            <operation>equals</operation>
            <value>Closed</value>
        </filters>
        <filters>
            <field>Scheduled_Follow_Up_date__c</field>
            <operation>lessThan</operation>
            <value>11/17/2015</value>
        </filters>
        <label>Cupertino - Specialist Surveys</label>
        <sharedTo>
            <role>XO_Clinical_User_Apple_Cupertino</role>
            <role>XO_Practice_Manager_Apple_Cupertino</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Cupe_Sleep_Medicine_already_closed</fullName>
        <columns>Lumeris_ID__c</columns>
        <columns>NAME</columns>
        <columns>Patient_First_Name__c</columns>
        <columns>Specialist_Survey_Sent__c</columns>
        <columns>Follow_Up_Status__c</columns>
        <columns>Patient_DOB__c</columns>
        <columns>Referring_Provider__c</columns>
        <columns>Notes__c</columns>
        <columns>Provider_Name__c</columns>
        <columns>Provider_Phone_Number__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Follow_Up_Status__c</field>
            <operation>equals</operation>
            <value>Closed</value>
        </filters>
        <filters>
            <field>Medical_Specialty__c</field>
            <operation>equals</operation>
            <value>Sleep Medicine,Sleep Medicine - Other</value>
        </filters>
        <filters>
            <field>Priority__c</field>
            <operation>notContain</operation>
            <value>Urgent</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>greaterOrEqual</operation>
            <value>1/1/2015 12:00 AM</value>
        </filters>
        <label>Cupe - Sleep Medicine (already closed)</label>
        <sharedTo>
            <role>XO_Clinical_User_Apple_Cupertino</role>
            <role>XO_Practice_Manager_Apple_Cupertino</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Cupertino_All</fullName>
        <columns>NAME</columns>
        <columns>Patient_First_Name__c</columns>
        <columns>Reason_For_Follow_Up__c</columns>
        <columns>Medical_Specialty__c</columns>
        <columns>Imaging__c</columns>
        <columns>Scheduled_Follow_Up_date__c</columns>
        <columns>Referring_Provider__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Follow_Up_Status__c</field>
            <operation>equals</operation>
            <value>Open</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>XO_Follow_Up_Tracking__c.Apple_Cupertino,XO_Follow_Up_Tracking__c.Apple_Sacramento</value>
        </filters>
        <label>Cupertino - All</label>
        <sharedTo>
            <role>XO_Clinical_User_Apple_Cupertino</role>
            <role>XO_Practice_Manager_Apple_Cupertino</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Cupertino_Cardiology_Done_4_222</fullName>
        <columns>Scheduled_Follow_Up_date__c</columns>
        <columns>Provider_Name__c</columns>
        <columns>NAME</columns>
        <columns>Patient_First_Name__c</columns>
        <columns>Patient_DOB__c</columns>
        <columns>Provider_Phone_Number__c</columns>
        <columns>Referring_Provider__c</columns>
        <columns>Notes__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Medical_Specialty__c</field>
            <operation>equals</operation>
            <value>Cardiology,Cardiology - Other</value>
        </filters>
        <filters>
            <field>Follow_Up_Status__c</field>
            <operation>equals</operation>
            <value>Open</value>
        </filters>
        <filters>
            <field>Priority__c</field>
            <operation>notContain</operation>
            <value>Urgent</value>
        </filters>
        <label>Cupertino - Cardiology</label>
        <sharedTo>
            <role>XO_Clinical_User_Apple_Cupertino</role>
            <role>XO_Practice_Manager_Apple_Cupertino</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Cupertino_Derm_Biopsy</fullName>
        <columns>NAME</columns>
        <columns>Patient_DOB__c</columns>
        <columns>Patient_First_Name__c</columns>
        <columns>Lumeris_ID__c</columns>
        <columns>Notes__c</columns>
        <columns>Provider_Name__c</columns>
        <columns>Patient_Phone__c</columns>
        <columns>Referral_Status__c</columns>
        <columns>Referring_Provider__c</columns>
        <columns>Scheduled_Follow_Up_date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Provider_Name__c</field>
            <operation>equals</operation>
        </filters>
        <label>Cupertino - Derm Biopsy</label>
        <sharedTo>
            <role>XO_Clinical_User_Apple_Cupertino</role>
            <role>XO_Practice_Manager_Apple_Cupertino</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Cupertino_General_Surgery</fullName>
        <columns>NAME</columns>
        <columns>Patient_First_Name__c</columns>
        <columns>Patient_DOB__c</columns>
        <columns>Referring_Provider__c</columns>
        <columns>Notes__c</columns>
        <columns>Provider_Name__c</columns>
        <columns>Provider_Phone_Number__c</columns>
        <columns>Scheduled_Follow_Up_date__c</columns>
        <columns>Provider_Name_if_Other__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Medical_Specialty__c</field>
            <operation>equals</operation>
            <value>General Surgery - Other,General Surgery</value>
        </filters>
        <filters>
            <field>Follow_Up_Status__c</field>
            <operation>equals</operation>
            <value>Open</value>
        </filters>
        <filters>
            <field>Priority__c</field>
            <operation>notContain</operation>
            <value>Urgent</value>
        </filters>
        <label>Cupertino - General Surgery</label>
        <sharedTo>
            <role>XO_Clinical_User_Apple_Cupertino</role>
            <role>XO_Practice_Manager_Apple_Cupertino</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Cupertino_Heme_Onc</fullName>
        <columns>NAME</columns>
        <columns>Patient_First_Name__c</columns>
        <columns>Patient_DOB__c</columns>
        <columns>Scheduled_Follow_Up_date__c</columns>
        <columns>Referring_Provider__c</columns>
        <columns>Notes__c</columns>
        <columns>Priority__c</columns>
        <columns>Provider_Name__c</columns>
        <columns>Provider_Phone_Number__c</columns>
        <columns>Medical_Specialty__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Follow_Up_Status__c</field>
            <operation>equals</operation>
            <value>Open</value>
        </filters>
        <filters>
            <field>Medical_Specialty__c</field>
            <operation>equals</operation>
            <value>Hematology/Oncology,Hematology,Hematology/Oncology - Other</value>
        </filters>
        <filters>
            <field>Priority__c</field>
            <operation>notContain</operation>
            <value>Urgent</value>
        </filters>
        <label>Cupertino - Heme/Onc</label>
        <sharedTo>
            <role>XO_Clinical_User_Apple_Cupertino</role>
            <role>XO_Practice_Manager_Apple_Cupertino</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Cupertino_Internal_Medicine</fullName>
        <columns>NAME</columns>
        <columns>Patient_First_Name__c</columns>
        <columns>Provider_Name__c</columns>
        <columns>Provider_Phone_Number__c</columns>
        <columns>Scheduled_Follow_Up_date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Follow_Up_Status__c</field>
            <operation>equals</operation>
            <value>Open</value>
        </filters>
        <filters>
            <field>Medical_Specialty__c</field>
            <operation>equals</operation>
            <value>Internal Medicine</value>
        </filters>
        <filters>
            <field>Priority__c</field>
            <operation>notContain</operation>
            <value>Urgent</value>
        </filters>
        <label>Cupertino - Internal Medicine</label>
        <sharedTo>
            <role>XO_Clinical_User_Apple_Cupertino</role>
            <role>XO_Practice_Manager_Apple_Cupertino</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Cupertino_Medical_Records</fullName>
        <columns>CREATED_DATE</columns>
        <columns>Patient_First_Name__c</columns>
        <columns>NAME</columns>
        <columns>Provider_Phone_Number__c</columns>
        <columns>Notes__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Reason_For_Follow_Up__c</field>
            <operation>equals</operation>
            <value>Medical Records</value>
        </filters>
        <filters>
            <field>Follow_Up_Status__c</field>
            <operation>equals</operation>
            <value>Open</value>
        </filters>
        <label>Cupertino - Medical Records</label>
        <sharedTo>
            <role>XO_Clinical_User_Apple_Cupertino</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Cupertino_Nephrology</fullName>
        <columns>NAME</columns>
        <columns>Patient_First_Name__c</columns>
        <columns>Patient_DOB__c</columns>
        <columns>Scheduled_Follow_Up_date__c</columns>
        <columns>Notes__c</columns>
        <columns>Provider_Name__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Follow_Up_Status__c</field>
            <operation>equals</operation>
            <value>Open</value>
        </filters>
        <filters>
            <field>Medical_Specialty__c</field>
            <operation>equals</operation>
            <value>Nephrology</value>
        </filters>
        <filters>
            <field>Priority__c</field>
            <operation>notContain</operation>
            <value>Urgent</value>
        </filters>
        <label>Cupertino - Nephrology</label>
        <sharedTo>
            <role>XO_Clinical_User_Apple_Cupertino</role>
            <role>XO_Practice_Manager_Apple_Cupertino</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Cupertino_Neurology_4_23</fullName>
        <columns>Scheduled_Follow_Up_date__c</columns>
        <columns>Provider_Name__c</columns>
        <columns>Provider_Phone_Number__c</columns>
        <columns>NAME</columns>
        <columns>Patient_First_Name__c</columns>
        <columns>Patient_DOB__c</columns>
        <columns>Referring_Provider__c</columns>
        <columns>Notes__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Follow_Up_Status__c</field>
            <operation>equals</operation>
            <value>Open</value>
        </filters>
        <filters>
            <field>Medical_Specialty__c</field>
            <operation>equals</operation>
            <value>Neurology - Other,Neurology</value>
        </filters>
        <filters>
            <field>Priority__c</field>
            <operation>notContain</operation>
            <value>Urgent</value>
        </filters>
        <label>Cupertino - Neurology</label>
        <sharedTo>
            <role>XO_Clinical_User_Apple_Cupertino</role>
            <role>XO_Practice_Manager_Apple_Cupertino</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Cupertino_Neurosurgery_Spine</fullName>
        <columns>NAME</columns>
        <columns>Patient_First_Name__c</columns>
        <columns>Patient_DOB__c</columns>
        <columns>Referring_Provider__c</columns>
        <columns>Scheduled_Follow_Up_date__c</columns>
        <columns>Provider_Name__c</columns>
        <columns>Notes__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Follow_Up_Status__c</field>
            <operation>equals</operation>
            <value>Open</value>
        </filters>
        <filters>
            <field>Medical_Specialty__c</field>
            <operation>equals</operation>
            <value>Neurosurgery/Spinal Surgery</value>
        </filters>
        <filters>
            <field>Priority__c</field>
            <operation>notContain</operation>
            <value>Urgent</value>
        </filters>
        <label>Cupertino - Neurosurgery/Spine</label>
        <sharedTo>
            <role>XO_Clinical_User_Apple_Cupertino</role>
            <role>XO_Practice_Manager_Apple_Cupertino</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Cupertino_Ophthalmology</fullName>
        <columns>NAME</columns>
        <columns>Patient_First_Name__c</columns>
        <columns>Patient_DOB__c</columns>
        <columns>Notes__c</columns>
        <columns>Scheduled_Follow_Up_date__c</columns>
        <columns>Provider_Name__c</columns>
        <columns>Provider_Phone_Number__c</columns>
        <columns>Priority__c</columns>
        <columns>Referring_Provider__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Follow_Up_Status__c</field>
            <operation>equals</operation>
            <value>Open</value>
        </filters>
        <filters>
            <field>Medical_Specialty__c</field>
            <operation>equals</operation>
            <value>Ophthalmology</value>
        </filters>
        <filters>
            <field>Priority__c</field>
            <operation>notContain</operation>
            <value>Urgent</value>
        </filters>
        <label>Cupertino - Ophthalmology</label>
        <sharedTo>
            <role>XO_Clinical_User_Apple_Cupertino</role>
            <role>XO_Practice_Manager_Apple_Cupertino</role>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Patient Last Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>XO Follow Up Tracking</pluralLabel>
    <recordTypes>
        <fullName>AMAT_Gloucester</fullName>
        <active>true</active>
        <description>Practice profile for AMAT Gloucester</description>
        <label>AMAT Gloucester</label>
    </recordTypes>
    <recordTypes>
        <fullName>AMAT_Santa_Clara</fullName>
        <active>true</active>
        <label>AMAT Santa Clara</label>
    </recordTypes>
    <recordTypes>
        <fullName>Apple_Austin</fullName>
        <active>true</active>
        <label>Apple Austin</label>
    </recordTypes>
    <recordTypes>
        <fullName>Apple_Cupertino</fullName>
        <active>true</active>
        <label>Apple Cupertino</label>
    </recordTypes>
</CustomObject>